# kafka-from-scratch

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: server.hpp
src/: main.cpp  server.cpp
src/network/: server.cpp  server.hpp
src/protocol/: parser.cpp  parser.hpp
